--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Yihai Wei | 魏屹海"
 description              : "Focusing on synthetic aperture radar (SAR), hardware and embedded system."
-repository               : "dhwl1234/weiyihai.github.io"
+repository               : "dhwl1234/dhwl1234.github.io"
 google_scholar_stats_use_cdn : false
 
 # google analytics
