--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Yihai Wei | 魏屹海"
-  avatar           : "images/wyh_profile.jpeg"
+  avatar           : "images/wyh_profile.jpg"
   bio              : "Aerospace and Microwave Remote Sensing System Department, Aerospace Information Innovation Institute, Chinese Academy of Sciences"
   location         : "Beijing, China"
   employer         :
