--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Yihai Wei | 魏屹海"
-description              : "Focusing on synthetic-aperture-radar(SAR),FPGA,hardware and embedded system."
+description              : "Focusing on synthetic aperture radar(SAR),hardware，FPGA and embedded system."
 repository               : "dhwl1234/dhwl1234.github.io"
 google_scholar_stats_use_cdn : false
 
